k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback-frontend
  labels:
    app: feedback-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: feedback-frontend
  template:
    metadata:
      labels:
        app: feedback-frontend
    spec:
      containers:
        - name: frontend
          image: 050752638165.dkr.ecr.us-east-1.amazonaws.com/feedback-frontend:latest
          ports:
            - containerPort: 80
